[gd_scene load_steps=9 format=2]

[ext_resource path="res://Imatges/Ninja el frog/Traps/Spike Head/Idle.png" type="Texture" id=1]
[ext_resource path="res://Imatges/Ninja el frog/Traps/Spike Head/Blink (54x52).png" type="Texture" id=2]
[ext_resource path="res://Area2D.gd" type="Script" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 54, 52 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 54, 0, 54, 52 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 108, 0, 54, 52 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 162, 0, 54, 52 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "Blink",
"speed": 5.0
} ]

[node name="Area2D" type="Area2D"]
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 2, 2 )
frames = SubResource( 5 )
animation = "Idle"
playing = true

[node name="Timer" type="Timer" parent="."]
wait_time = 4.0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -42, 17, -42, -16, -15, -42, 17, -42, 44, -16, 44, 18, 17, 44, -15, 44 )

[node name="Timer2" type="Timer" parent="."]
wait_time = 0.8

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
